Add an id to counter-element

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <div id="cat-picture"></div>
 </div>
   <script src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
   </body>
   <html>
