Separate the code into Model, View and Octopus (MVO)

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cat Clicker Premium</title>
+  <title>Cat Clicker</title>
 </head>
 <body>
-<div class = "container">
   <h1>Cat Clicker Premium</h1>
   <ul id="cat-list"></ul>
-  <div id="cat-picture"></div>
-</div>
-  <script src="script.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <div id="cat">
+    <h2 id="cat-name"></h2>
+    <div id="cat-count"></div>
+    <img id="cat-img" src="" alt="cute kitty"></img>
+  </div>
+  <!-- <script src="script.js"></script> -->
+  <script src="mvo.js"></script>
 
   </body>
   <html>
